--- a/DSSystem/web/caglaeskipages/RegisterPage.html
+++ b/DSSystem/web/caglaeskipages/RegisterPage.html
@@ -64,7 +64,8 @@
                     <button class="btn btn-lg btn-primary btn-block"  name="Submit" value="Login" type="Submit">Login</button>  			
 
                 </form>	
-
+            </div>
+        </div>
     </body>
 
 </html>
