--- a/DSSystem/DoctorPage.html
+++ b/DSSystem/DoctorPage.html
@@ -1,9 +1,4 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-<jsp:useBean id = "dbbean" scope = "session" class = "controller.LoginDao" >
-</jsp:useBean>
-<jsp:setProperty name = "dbbean" property = "*" />
-
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -11,13 +6,29 @@
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     <body>
-        <%
-            if (session.getAttribute("email") == null) {
-                response.sendRedirect("drugspage.html");
-            }
-            String email = (String) session.getAttribute("email");
-            String firstname = dbbean.takeDoctorName(email);
-        %>
+        <div id="header">
+            <div class="clearfix">
+                <div class="logo">
+                    <a href="index.html" title="fff"></a>
+                </div>
+                <ul class="navigation">
+                    <li class="active">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+
+                    <li>
+                        <a href="news.html">Login</a>
+
+                    </li>
+                    <li>
+                         <a href="Register.html">Register</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
         <div class="featured">
             <h2>Drugs</h2>
@@ -68,6 +79,5 @@
                 </li>
             </ul>
         </div>
-
-    </body>
+   </body>
 </html>
