--- a/DSSystem/web/Login.html
+++ b/DSSystem/web/Login.html
@@ -47,11 +47,11 @@
                         
                         <label>User Type :</label>   
                         
-                        <input type="radio" name="usertype" value="1">User<br>
-                        <input type="radio" name="usertype" value="2" checked>Doctor<br>
+                        <input type="radio" name="usertype" value="1">User</br>
+                        <input type="radio" name="usertype" value="2" checked>Doctor</br>
 
-
-                        <input type="submit" value="Login">
+                        &nbsp;
+                        <br><input type="submit" value="Login"><br/>
                     </form>
                 </div>
             </div>
