--- a/DSSystem/web/Register.html
+++ b/DSSystem/web/Register.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Law Firm</title>
+        <title>Drug Store</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel="stylesheet" href="css/style.css" type="text/css">
