--- a/DSSystem/web/drugspage.html
+++ b/DSSystem/web/drugspage.html
@@ -13,7 +13,7 @@
                 </div>
                 <ul class="navigation">
                     <li class="active">
-                        <a href="index.html">Home</a>
+                        <a href="drugspage.html">Home</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
