--- a/DSSystem/web/drugspage.html
+++ b/DSSystem/web/drugspage.html
@@ -16,7 +16,7 @@
                         <a href="drugspage.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="maşn.jsp">About</a>
                     </li>
 
                     <li>
